styles/default.css
/* ... */
input, textarea, button {
    font-family: 'Open Sans', arial, sans-serif;
	font-size: 14px;
}

/* BUTTON
*******************************/

.button {
    display: inline-block;
    background:-webkit-linear-gradient(top, #EEE 0%, #CCC 100%);
    background:-moz-linear-gradient(top, #EEE 0%, #CCC 100%);
    background:-ms-linear-gradient(top, #EEE 0%, #CCC 100%);
    background:-o-linear-gradient(top, #EEE 0%, #CCC 100%);
    background:linear-gradient(top, #EEE 0%, #CCC 100%);
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    padding: 4px;
    border-radius: 5px;
    border: 1px solid #8B9594;
    text-align: center;
    min-width: 60px;
    font-size: 14px;
    line-height: 20px;
    cursor: pointer;
    text-decoration: none;
    color: #222;
}
.button:hover {
    border: 1px solid #778180;
    color: #000;
}
.button:active {
    background:-webkit-linear-gradient(top, #CCC 0%, #EEE 100%);
    background:-moz-linear-gradient(top, #CCC 0%, #EEE 100%);
    background:-ms-linear-gradient(top, #CCC 0%, #EEE 100%);
    background:-o-linear-gradient(top, #CCC 0%, #EEE 100%);
    background:linear-gradient(top, #CCC 0%, #EEE 100%);
    border: 1px solid #778180;
    color: #000;
}

.button.exposed {
    color: #FFF;
    text-shadow: 0px 1px 1px rgba(0,0,0,0.5);
    font-weight: bold;
    background: -webkit-linear-gradient(top, #499bea 0%,#207ce5 100%);
    background: -moz-linear-gradient(top, #499bea 0%, #207ce5 100%);
    background: -ms-linear-gradient(top, #499bea 0%,#207ce5 100%);
    background: -o-linear-gradient(top, #499bea 0%,#207ce5 100%);
    background: linear-gradient(top, #499bea 0%,#207ce5 100%);
}
.button.exposed:hover {
    border: 1px solid #778180;
    color: #FFF;
}
.button.exposed:active {
    background: -webkit-linear-gradient(top, #207ce5 0%,#499bea 100%);
    background: -moz-linear-gradient(top, #207ce5 0%, #499bea 100%);
    background: -ms-linear-gradient(top, #207ce5 0%,#499bea 100%);
    background: -o-linear-gradient(top, #207ce5 0%,#499bea 100%);
    background: linear-gradient(top, #207ce5 0%,#499bea 100%);
}

.selected {
    color: #FFF;
    text-shadow: 0px 1px 1px rgba(0,0,0,0.5);
    background-color: rgba(62, 126, 221, 1);
/*    background-color: rgba(33, 125, 229, 0.5);
    background: -webkit-linear-gradient(top, #6db3f2 0%,#3e7edd 100%);
    background: -moz-linear-gradient(top, #6db3f2 0%, #3e7edd 100%);
    background: -ms-linear-gradient(top, #6db3f2 0%,#3e7edd 100%);
    background: -o-linear-gradient(top, #6db3f2 0%,#3e7edd 100%); */
}

/** RESET ELEMS
 ****************************************************************************/
.pane.selected  {
    font-size: 14px;
    color: #222;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
 }
/** TOP
 ****************************************************************************/
body.fullscreen #top {
    display: none;
}

#top {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    position: absolute;
    padding: 0 25px 0 5px;
    width: 100%;
    z-index: 10;
    background: rgba(255,255,255, 0.5);
    border-bottom: 2px groove #FFFFFF;
}
#top .left-area,
#top .right-area {
    line-height: 50px;
}
#top .left-area {
    float: left;
}
#top .right-area {
    float: right;
}
#top .item {
    display: inline-block;
    vertical-align: middle;
    margin-right: 10px;
}
#top .item.last {
    margin-right: 0;
}
#top .dropdown-button {
    cursor: pointer;
    font-size: 14px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
}
#top .dropdown-button:after {
    content: '\25BE';
    font-size: 16px;
    color: #666;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
}
#top .logo {
    background: url(/images/banner/banner_192x64.png) no-repeat center center;
    background-size: 96px 32px;
    width: 96px;
    height: 32px;
}
#top .profile {
    padding-left: 27px;
    background-size: 24px 24px;
    background-repeat: no-repeat;
    background-position: left center;
}
#top .profile img {
    display: inline-block;
}
#top .search {
    padding-right: 34px; /* button width */
    position: relative;
}
input[type=search]::-webkit-search-decoration,
input[type=search]::-webkit-search-results-button,
input[type=search]::-webkit-search-results-decoration {
  display: none;
}
#top .search input[type=search] {
    -webkit-appearance: none;
    -moz-box-sizing: content-box;
    -webkit-box-sizing: content-box;
    box-sizing: content-box;
    height: 26px;
    width: 200px;
    padding: 2px 4px 2px 6px;
    border-radius: 10px 0 0 10px;
    border: 1px solid #8B9594;
    border-right: none;
    outline: none;
    background-color: #FFF;
}
#top .search button {
    position: absolute;
    right: 0;
    top: 10px;
    min-width: 35px;
    width: 35px;
    height: 32px;
    padding:0;
    border-radius: 0 10px 10px 0;
    outline: none;
}
#top .search button:after {
    content: 'ô';
    font-family: EntypoRegular;
    font-size: 50px;
    line-height: 20px;
    font-weight: normal;
    position: absolute;
    top: -2px;
    left: 3px;
}
#settings .puffs .chrome-webstore {
    padding-left: 20px;
    background: url(/images/chrome_16.png) no-repeat left center;
}
#top .settings .counter {
    background: rgba(0, 124, 137, 0.4);
    color: white;
    border-radius: 4px;
    padding: 0 4px;
    font-size: 10px;
    font-weight: bold;
    vertical-align: top;
}
#top .menu .login-link {
    cursor: pointer;
}
#top .notifications {
    position: absolute;
    z-index: 25;
    right: 10px;
    top: 10px;
    min-width: 200px;
}
/* ... */

